-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P4
-
Affects Version/s: 17, 21, 23, 24
-
Component/s: hotspot
-
b11
| Issue | Fix Version | Assignee | Priority | Status | Resolution | Resolved In Build |
|---|---|---|---|---|---|---|
| JDK-8353602 | 21.0.8-oracle | Calvin Cheung | P4 | Resolved | Fixed | b02 |
| JDK-8352167 | 21.0.8 | Satyen Subramaniam | P4 | Resolved | Fixed | b01 |
The test com/sun/jdi/EATests.java#id0 sometimes fails with
Stack: [0x000000f373e00000,0x000000f373f00000]
Native frames: (J=compiled Java code, j=interpreted, Vv=VM code, C=native code)
V [jvm.dll+0xc956e1] os::win32::platform_print_native_stack+0x101 (os_windows_x86.cpp:235)
V [jvm.dll+0xf59abb] VMError::report+0x149b (vmError.cpp:1010)
V [jvm.dll+0xf5c15e] VMError::report_and_die+0x80e (vmError.cpp:1845)
V [jvm.dll+0x55796e] report_fatal+0x7e (debug.cpp:214)
V [jvm.dll+0xd4d591] ResourceArea::allocate_bytes+0x111 (resourceArea.inline.hpp:33)
V [jvm.dll+0xf44bef] vframe::new_vframe+0x7f (vframe.cpp:68)
V [jvm.dll+0x7fb97a] JavaThread::last_java_vframe+0x3a (javaThread.cpp:2044)
V [jvm.dll+0xf8f659] WB_IsFrameDeoptimized+0x219 (whitebox.cpp:798)
C 0x000001fbdebd3b96 (no source info available)
Stack: [0x000000f373e00000,0x000000f373f00000]
Native frames: (J=compiled Java code, j=interpreted, Vv=VM code, C=native code)
V [jvm.dll+0xc956e1] os::win32::platform_print_native_stack+0x101 (os_windows_x86.cpp:235)
V [jvm.dll+0xf59abb] VMError::report+0x149b (vmError.cpp:1010)
V [jvm.dll+0xf5c15e] VMError::report_and_die+0x80e (vmError.cpp:1845)
V [jvm.dll+0x55796e] report_fatal+0x7e (debug.cpp:214)
V [jvm.dll+0xd4d591] ResourceArea::allocate_bytes+0x111 (resourceArea.inline.hpp:33)
V [jvm.dll+0xf44bef] vframe::new_vframe+0x7f (vframe.cpp:68)
V [jvm.dll+0x7fb97a] JavaThread::last_java_vframe+0x3a (javaThread.cpp:2044)
V [jvm.dll+0xf8f659] WB_IsFrameDeoptimized+0x219 (whitebox.cpp:798)
C 0x000001fbdebd3b96 (no source info available)
- backported by
-
JDK-8352167 WB_IsFrameDeoptimized miss ResourceMark
-
- Resolved
-
-
JDK-8353602 WB_IsFrameDeoptimized miss ResourceMark
-
- Resolved
-
- links to
-
Commit(master)
openjdk/jdk21u-dev/be4ee930
-
Commit(master)
openjdk/jdk/9f08a01c
-
Review(master)
openjdk/jdk21u-dev/1499
-
Review(master)
openjdk/jdk/20502
(1 links to)