8338010: WB_IsFrameDeoptimized miss ResourceMark

Reviewed-by: dholmes, shade